<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linalgs.practica14.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/saddlebrown"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/orange"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/fuchsia"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="4"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="5"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="6"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="7"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="8"
                android:textColor="@color/black"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="9"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:layout_margin="3sp"
            android:text="@string/negro"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/saddlebrown"
            android:layout_margin="3sp"
            android:text="@string/marron"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:layout_margin="3sp"
            android:text="@string/rojo"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:layout_margin="3sp"
            android:text="@string/naranja"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/yellow"
            android:layout_margin="3sp"
            android:text="@string/amarillo"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:layout_margin="3sp"
            android:text="@string/verde"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:layout_margin="3sp"
            android:text="@string/azul"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/fuchsia"
            android:layout_margin="3sp"
            android:text="@string/purpura"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_margin="3sp"
            android:text="@string/gris"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_margin="3sp"
            android:text="@string/blanco"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/peru"
            android:layout_margin="3sp"
            android:text="@string/marron"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:layout_margin="3sp"
            android:text="@string/red"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/gold"
            android:layout_margin="3sp"
            android:text="@string/dorado"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightgray"
            android:layout_margin="3sp"
            android:text="@string/gris"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/codigo"
            android:textColor="@color/black"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/resistencia"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cifra1" />
            <Spinner
                android:id="@+id/sCifra1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cifra2" />
            <Spinner
                android:id="@+id/sCifra2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cifraM" />
            <Spinner
                android:id="@+id/sCifraM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cifraT" />
            <Spinner
                android:id="@+id/sCifraT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/bResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:onClick="Resultado"
                android:text="@string/calcular"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/resistencia"
                android:textColor="@color/black"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
